--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,7 +2,9 @@
 @import './_colors';
 @import './reset';
 
-body, .main-container, .container {
+body,
+.main-container,
+.container {
     height: 100%;
     background-color: $primaryColor1;
     color: $fontcolor;
@@ -26,11 +28,30 @@ div>.container {
 }
 
 .logo {
-    width: 60%;
+    width: 55%;
+}
+
+.home {
+    display: flex;
+    margin-top: 5em;
+
+    .textArea {
+        width: 55%;
+    }
+
+    .homeImage {
+        width: 45%;
+    }
+}
+
+p {
+    font-size: 14px;
+    word-spacing: 2px;
+    line-height: 1.7em;
 }
 
 .pages {
-    width: 40%;
+    width: 45%;
     line-height: 80px;
 }
 
@@ -44,5 +65,246 @@ a {
 }
 
 a:hover {
-   text-transform: uppercase;
+    text-transform: uppercase;
 }
+
+.textArea {
+    margin-top: 8em;
+
+
+    h1,
+    h2,
+    p,
+    input {
+        padding: 5px 0px;
+    }
+
+    h1 {
+        font-weight: 600;
+    }
+
+    h3 {
+        color: $primaryColor2;
+    }
+
+    p {
+        margin-top: 10px;
+
+    }
+
+    input {
+        margin: 15px 0px;
+        padding: 7px 10px;
+        font-size: 14px;
+        border: 1px solid white;
+        color: black;
+        cursor: pointer;
+    }
+}
+
+.textArea>input:hover {
+    border: 1px solid white;
+    background: none;
+    color: white;
+}
+
+.line {
+    font-weight: bolder;
+    margin-top: -5px;
+}
+
+.aboutArea {
+    margin-top: 10em;
+    display: flex;
+
+    .aboutImage {
+        width: 55%;
+    }
+
+    .about {
+        width: 45%;
+    }
+}
+
+.about>.line {
+    margin: 10px 0;
+}
+
+.about>input {
+    margin: 15px 0px;
+    padding: 7px 10px;
+    font-size: 14px;
+    border: 1px solid white;
+    color: black;
+    cursor: pointer;
+}
+
+.about>input:hover {
+    border: 1px solid white;
+    background: none;
+    color: white;
+
+}
+
+.skill-background {
+    height: 500px;
+    margin-top: 10em;
+    background-color: $primaryColor3;
+    width: 100%;
+}
+
+.containerSkill {
+    width: 70%;
+    margin: 0 auto;
+    position: relative;
+    top: 70px;
+
+    p {
+        margin-top: 20px;
+        text-align: center;
+    }
+
+    .line {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+
+    }
+
+    h2 {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+    }
+}
+
+.skillBar {
+    margin: 2em 1em;
+    display: flex;
+
+    .bar-1,
+    .bar-2 {
+        width: 50%;
+
+        .right {
+            float: right;
+            margin-right: 4em;
+            font-size: 16px;
+        }
+    }
+}
+
+.skillBar {
+    .bar-1>.progress {
+        width: 400px;
+        height: 5px;
+        margin: 10px 0 40px 0;
+        background-color: $primaryColor2;
+
+        .htmlscore {
+            background-color: white;
+            width: 92%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+        .cssscore {
+            background-color: white;
+            width: 87%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+        .scssscore {
+            background-color: white;
+            width: 79%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+    }
+
+    .bar-2>.progress {
+        width: 400px;
+        height: 5px;
+        margin: 10px 0 40px 0;
+        background-color: $primaryColor2;
+
+        .jsscore {
+            background-color: white;
+            width: 69%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }  
+        .vuescore {
+            background-color: white;
+            width: 48%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }  
+        .xdscore {
+            background-color: white;
+            width: 85%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }  
+    }
+}
+
+/* .containerSkill>.skillBars {
+    margin-top: 3em;
+
+    h3 {
+        margin: 0;
+    }
+    .html,
+    .css,
+    .js,
+    .scss {
+        margin: 2empx 0px;
+    }
+} */
+/* 
+.containerSkill>.skillBars {
+    .Bar {
+        width: 400px;
+        height: 5px;
+        background-color: $primaryColor2;
+    }
+
+
+    .htmlScore {
+        background-color: white;
+        width: 92%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
+
+    .cssScore {
+        background-color: white;
+        width: 80%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
+
+    .scssScore {
+        background-color: white;
+        width: 79%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
+
+    .jsScore {
+        background-color: white;
+        width: 69%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    } 
+}*/
