--- a/sass/main.scss
+++ b/sass/main.scss
@@ -33,19 +33,19 @@ div>.container {
 
 .home {
     display: flex;
-    margin-top: 5em;
+    margin-top: 0;
 
     .textArea {
-        width: 55%;
+        width: 45%;
     }
 
     .homeImage {
-        width: 45%;
+        width: 55%;
     }
 }
 
 p {
-    font-size: 14px;
+    font-size: 16px;
     word-spacing: 2px;
     line-height: 1.7em;
 }
@@ -69,7 +69,7 @@ a:hover {
 }
 
 .textArea {
-    margin-top: 8em;
+    margin-top: 10em;
 
 
     h1,
@@ -81,6 +81,7 @@ a:hover {
 
     h1 {
         font-weight: 600;
+        font-size: 36px;
     }
 
     h3 {
@@ -94,8 +95,8 @@ a:hover {
 
     input {
         margin: 15px 0px;
-        padding: 7px 10px;
-        font-size: 14px;
+        padding: 7px 15px;
+        font-size: 16px;
         border: 1px solid white;
         color: black;
         cursor: pointer;
@@ -110,24 +111,30 @@ a:hover {
 
 .line {
     font-weight: bolder;
-    margin-top: -5px;
+    margin-top: 10px 0px;
 }
 
 .aboutArea {
-    margin-top: 10em;
+    margin-top: 2em;
     display: flex;
 
     .aboutImage {
         width: 55%;
+
+        img {
+            position: relative;
+            margin: -5em 0 0 -4em;
+        }
     }
 
     .about {
         width: 45%;
+        margin-top: 4em;
     }
 }
 
 .about>.line {
-    margin: 10px 0;
+    margin: 5px 0px 10px 0px;
 }
 
 .about>input {
@@ -148,7 +155,7 @@ a:hover {
 
 .skill-background {
     height: 500px;
-    margin-top: 10em;
+    margin-top: 0em;
     background-color: $primaryColor3;
     width: 100%;
 }
@@ -175,6 +182,7 @@ a:hover {
         display: flex;
         width: 100%;
         justify-content: center;
+        margin-bottom: 5px;
     }
 }
 
@@ -208,6 +216,7 @@ a:hover {
             margin: 0;
             padding: 0;
         }
+
         .cssscore {
             background-color: white;
             width: 87%;
@@ -215,6 +224,7 @@ a:hover {
             margin: 0;
             padding: 0;
         }
+
         .scssscore {
             background-color: white;
             width: 79%;
@@ -236,20 +246,83 @@ a:hover {
             height: 100%;
             margin: 0;
             padding: 0;
-        }  
+        }
+
         .vuescore {
             background-color: white;
             width: 48%;
             height: 100%;
             margin: 0;
             padding: 0;
-        }  
+        }
+
         .xdscore {
             background-color: white;
             width: 85%;
             height: 100%;
             margin: 0;
             padding: 0;
-        }  
+        }
+    }
+}
+
+.main-container> .container > .footer{
+    margin-top: 4em;
+    
+
+    h2{
+        text-align: center;
+    }
+    .line{
+        text-align: center;
+    }
+    .button{
+        display: flex;
+        justify-content: center;
+        margin: 15px 0;
+    }
+    input{
+        margin: 20px 0px;
+        padding: 8px 17px;
+        font-size: 16px;
+        border: 1px solid white;
+        color: black;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+
+        &:hover{
+            border: 1px solid white;
+            background: none;
+            color: white;
+        }
+    }
+    p{
+        text-align: center;
+        margin-bottom: 15px;
+    }
+    .icons{
+        display: flex;
+        justify-content: center;
+        
+
+        div{
+            border: 1px solid rgb(121, 110, 110);
+            background-color: rgb(121, 110, 110);
+            padding: 6px;
+            cursor: pointer;
+            border-radius: 20%;
+            margin: 0 5px;
+            width: auto;
+            height: auto;
+            
+        }
+    }
+    .hrline{
+        border-bottom: 1px solid white;
+        margin-top: 4em;
+    }
+    .copyright{
+        margin: 2em 0 0 3em;
     }
 }
