Updates for files

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,6 +21,7 @@ body,
 
 .navbar {
     display: flex;
+    margin-top: 15px;
 }
 
 div>.container {
@@ -40,7 +41,7 @@ div>.container {
 
 .home {
     display: flex;
-    margin-top: 0;
+    margin-top: 0px;
 
     .textArea {
         width: 45%;
